<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="worker"
            type="com.jonareas.taxer.model.entity.Worker" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/margin_standard"
        android:orientation="vertical"

        android:transitionName="@string/worker_transition_name"
        tools:context=".view.worker.WorkerDetailFragment">

        <TextView
            style="@style/Widget.Inventory.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/first_name" />

        <View
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_small" />

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/palanquin"
            android:text="@{worker.firstName}"
            android:paddingStart="@dimen/margin_small"
            android:singleLine="true"
            android:textSize="@dimen/text_size_standard"
            tools:text="Pierre Simon" />

        <TextView
            style="@style/Widget.Inventory.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/surname" />

        <View
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_small" />

        <EditText
            android:id="@+id/edit_text_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/palanquin"
            android:text="@{worker.surname}"
            android:paddingStart="@dimen/margin_small"
            android:singleLine="true"
            android:textSize="@dimen/text_size_standard"
            tools:text="Laplace" />

        <TextView
            style="@style/Widget.Inventory.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/salary" />

        <EditText
            android:id="@+id/edit_text_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/palanquin"
            android:text="@{Double.toString(worker.salary)}"
            android:paddingStart="@dimen/margin_small"
            android:singleLine="true"
            android:textSize="@dimen/text_size_standard"
            tools:text="$499.99" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_high"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_count_label" />

        <Button
            android:id="@+id/button_delete"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_count_label" />

        <TextView
            style="@style/Widget.Inventory.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/taxes" />

        <TextView
            android:id="@+id/text_view_taxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/palanquin"
            android:text="@{@string/price_format(worker.taxes)}"
            android:paddingStart="@dimen/margin_small"
            android:textSize="@dimen/text_size_standard"
            tools:text="$19.99" />

        <TextView
            style="@style/Widget.Inventory.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/net_salary" />

        <TextView
            android:id="@+id/text_view_net_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/palanquin"
            android:paddingStart="@dimen/margin_small"
            android:text="@{@string/price_format(worker.netSalary)}"
            android:textSize="@dimen/text_size_standard"
            tools:text="$479.99" />


    </LinearLayout>
</layout>
