<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/workerListFragment">


    <fragment
        android:id="@+id/workerListFragment"
        android:name="com.jonareas.taxer.view.worker.WorkerListFragment"
        android:label="@string/worker_list"
        tools:layout="@layout/fragment_worker_list"
        >
        <action
            android:id="@+id/workerList_to_addWorker"
            app:destination="@id/addWorkerFragment" />
        <action
            android:id="@+id/workerList_to_workerDetail"
            app:destination="@id/workerDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addWorkerFragment"
        android:name="com.jonareas.taxer.view.worker.AddWorkerFragment"
        android:label="@string/add_worker"
        tools:layout="@layout/fragment_add_worker"
        />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.jonareas.taxer.view.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/workerDetailFragment"
        android:name="com.jonareas.taxer.view.worker.WorkerDetailFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_worker_detail" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="workerId"
            app:argType="long" />
    </fragment>

</navigation>
